fix: removed bootstrap to fix overlap in nav

--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,6 @@
 }
 
 @media screen and (max-width: 653px) {
-  body {
-    height: 120vh;
-    width: 100vw;
-    overflow-x: hidden;
-    overflow-y: scroll;
-  }
-
   .bkg-overlay {
     background-image: url("../images/ghanian.jpg");
     background-position: center;
@@ -22,9 +15,18 @@
     display: flex;
     height: max-content;
     background: rgba(80, 21, 31, 0.75);
-    padding: 1.5rem;
-    flex-direction: row;
+
+    flex-direction: column;
     z-index: 99;
+    width: 100vw;
+  }
+
+  .upper-nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 80px;
+    padding: 0 7vw;
   }
 
   .logo {
@@ -40,7 +42,8 @@
   }
 
   .nav ul {
-    display: block;
+    display: flex;
+    flex-direction: column;
     width: 100vw;
     background-color: #6f1c2b;
   }
@@ -65,7 +68,6 @@
     height: 16px;
     width: 20px;
     cursor: pointer;
-    margin-left: 23vw;
   }
 
   .menu-bar {
